css/style.css
*{
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

/* Font use 
font-family: 'Pacifico', cursive;
font-family: 'Quicksand', sans-serif;
*/

html, body{
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

.container {
  max-width: 1199px;
  margin: auto;
  padding-left: 15px;
  padding-right: 15px;
}

.sectionStyle{
  padding: 80px 0;
}

.title h3{
  font-family: 'Pacifico', cursive;
  color: #fe6600;
  font-size: 24px;
}

.title h2{
  font-family: 'Quicksand', sans-serif;
  font-size: 36px;
  font-weight: 700;
}

a, a:hover{
  text-decoration: none;
}

/* ------------------------------------------------------------------------- */
/* LIGHT THEME */
#myBody{
  background-color:white;
}

/* #switchButton {
  background-color: white;
} */

#switchButton .fa-sun{
  display: none;
}

#switchButton .fa-moon {
  display: block;
}

/* ------------------------------------------------------------------------- */
/* DARK THEME */
.dark#myBody {
  background-color: #232220;
}


/* .dark #switchButton{
  background-color: black;
} */

.dark #switchButton .fa-sun{
  display: block;
  color: white;
}

.dark #switchButton .fa-moon{
  display: none;
}

.dark .search__input{
  background-color: #232220;
}

.dark .search__icon{
  color: white;
}

.dark .title h2{
  color: white;
}

.dark .blogs__header h3{
  color: white;
}

.dark .blogs__desc {
  color: #eee;
}

.dark .blogs__desc:hover{
  color: #eee;
}

.dark .blogs__descDetail{
  color: #c2d0da;
}


.dark .blogs__footerInfo a{
  color:  #eee;
}
.dark .blogs__footer a{
  color:  #eee;
}

/* ------------------------------------------------------------------------- */
/* AUTHOR: TRUNG */
/* HEADER */

header {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 10;
  width: 100%;
}

.header__leftContent h1 a{
  font-size: 36px;
  font-weight: 700;
  color: white;
  text-decoration: none;
  cursor: pointer;
}

/* seperate left and right header content with grid */
.header__content {
  display: grid;
  grid-template-columns: 4fr 1fr;
  gap: 20px;
  padding: 40px 0 20px 0;
}

/* right header content */
.header__rightContent {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 20px;
  align-items: center;
}


.btn__switchThemes {
  background-color: transparent;
  border: none;
}

.header__switchTheme .fa-moon,
.header__switchTheme .fa-sun {
  font-size: 25px;
  background: none;
  color: white;
}

/* search box */
.header__searchBox {
  position: relative;
  display: flex;
}

.search__input {
  padding: 10px 50px 10px 20px;
  height: 45px;
  font-size: 16px;
  font-weight: 400;
  border: 1px solid #232220;
  border-radius: 6px;
  outline: none;
}

.search__icon {
  position: absolute;
  top: 15px;
  right: 20px;
  font-size: 15px;
  cursor: pointer;
}


/* button menu navbar */

.header__navBar .navbar .navbar-toggler {
  outline: none;
  border: none;
  background: none;
  text-align: center;
  color: white;
  font-size: 1.95em;
  font-weight: 700;
  padding: 8px;
}

.header__navBar .navbar .navbar-toggler-icon {
  color: white;
  /* --bs-navbar-toggler-icon-bg: white; */
}

.navbar-nav .nav-link.active,
.nav-link {
  color: white;
}

/* ------------------------------------------------------------------------- */
/* AUTHOR: TRUNG */
/*  BANNER or CAROUSEL */

.carousel {
  background-image: linear-gradient(to right, #ff6600, hsl(30deg 100% 1% / 20%)), url(../img/banner1.jpg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: initial;
  min-height: 700px;
}

.carousel__content {
  max-width: 600px;
  text-align: left;

  font-family: 'Quicksand', sans-serif;
  color: white;
  padding-top: 200px;
}

/* Button Read More */
.carousel button {
  background: transparent;
  border: 2px solid white;
  color: white;

  padding: 12px 45px;
  font-size: 16px;
  line-height: 30px;
  font-weight: 700;

  margin-top: 3rem;
}

.carousel button:hover{
  background-color: white;
  border: 2px solid white;
  color: #ff6600;
  text-decoration: none;
}

/* carousel__content font,... */
.carousel__content h3 {
  font-size: 44px;
  line-height: 53px;
  font-weight: 600;
}

.carousel__content p {
  font-size: 16px;
  line-height: 28px;
  margin-top: 1.5rem;
}

/* ------------------------------------------------------------------------- */
/* AUTHOR: PHUOC NGUYEN */
/* ABOUT US */
.aboutUs__right p{
  font-size: 18px;
  color: #5b606c;
  font-weight: 300;
  line-height: 32px;
}

.dark .about_us{
  background-color: #232220;
}

.dark .about_us p{
  color: white;
}
/* ------------------------------------------------------------------------- */
/* AUTHOR: TRUNG */
/* AGENT BLOCK */
.agents {
  background: #ff6600;
  
}

.agents .agent__no__margin {
  margin-left: 0;
  margin-right: 0;
}

.agents__img {
  background: url(../img/banner3.jpg);
  background-size: cover;
  background-position: center;
  align-items: center;

  height: 100%;
  position: relative;
  z-index: 1;
}
.agents__img::before{
  content: "";
  background: rgb(16 15 19 / 46%);
  position: absolute;
  top: 0;
  min-height: 100%;
  left: 0;
  right: 0;
  z-index: -1;
}

.agents__title {
  color: white;
  font-size: 20px;
  font-weight:400;
  line-height: 30px;
  letter-spacing: 1px;
  display: block;
  font-family: 'Pacifico', cursive;
}

.agents__title2 {
  font-size: 38px;
  line-height: 48px;
  font-weight: 600;
  color: black;
  font-family: 'Quicksand', sans-serif;
}

.agents__p{
  color: #ffdfc9;
}

.agents__subcribe {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 30px;
}

.agents__items:hover .agents__icon span{
  color: #ffc600;
}

.agents__icon {
  background: white;
  width: 70px;
  height: 70px;
  text-align: center;
  line-height: 70px;
  border-radius: 6px;
  transition: 0.3s ease-in-out;
}

.agents__icon span {
  color: #ff6600;
  font-size: 25px;
  line-height: 70px;
}
/* ... */

